--- a/src/components/AnimatedCard/AnimatedCard.scss
+++ b/src/components/AnimatedCard/AnimatedCard.scss
@@ -38,8 +38,8 @@
   border-radius: 24px;
   display: flex;
   flex-direction: column;
-  height: 500px;
-  min-height: 100%;
+  height: calc(500px - 24px * 2);
+  min-height: calc(500px - 24px * 2);
   overflow: hidden;
   position: relative;
   min-width: 100%;
@@ -178,6 +178,10 @@
     @include easyManagement;
   }
 
+  &--easy-management {
+    @include easyManagementCard;
+  }
+
   &__add-ons {
     @include addOns;
   }
@@ -192,6 +196,10 @@
 
   &__smart-control {
     @include smartControl;
+  }
+
+  &--smart-control {
+    @include smartControlCard;
   }
 
   &__rocket {
