--- a/src/components/IconCards/IconCards.scss
+++ b/src/components/IconCards/IconCards.scss
@@ -44,6 +44,22 @@
     }
   }
 
+  &--very-big {
+    flex-wrap: wrap;
+
+    > li {
+      width: 100%;
+
+      @media screen and (min-width: 535px) {
+        width: calc(100% / 2 - 12px);
+      }
+
+      @media screen and (min-width: 768px) {
+        width: calc(100% / 4 - 20px);
+      }
+    }
+  }
+
   &__item {
     display: flex;
     flex-direction: column;
