--- a/src/components/NotFound/NotFound.scss
+++ b/src/components/NotFound/NotFound.scss
@@ -43,6 +43,18 @@
     display: flex;
     justify-content: center;
     margin: 60px 0;
+    position: relative;
+
+    span svg {
+      opacity: 0.8;
+      position: relative;
+      overflow: hidden;
+    }
+
+    img {
+      position: absolute;
+      width: 100%;
+    }
   }
 
   &__subtitle {
