--- a/src/components/Slideshow/Slideshow.scss
+++ b/src/components/Slideshow/Slideshow.scss
@@ -32,14 +32,17 @@
     border-radius: 24px;
     height: 200px;
     margin: 0 15px;
+    min-width: 200px;
     overflow: hidden;
 
     @media screen and (min-width: 425px) {
       height: 250px;
+      min-width: 250px;
     }
 
     @media screen and (min-width: 550px) {
       height: 360px;
+      min-width: 360px;
     }
 
     img {
