--- a/src/components/BannerSection/BannerSection.scss
+++ b/src/components/BannerSection/BannerSection.scss
@@ -11,7 +11,7 @@
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: auto;
+    width: 100%;
     height: 100%;
     z-index: 0;
   }
