--- a/src/components/AnimatedCard/AnimatedCard.scss
+++ b/src/components/AnimatedCard/AnimatedCard.scss
@@ -38,8 +38,8 @@
   border-radius: 24px;
   display: flex;
   flex-direction: column;
-  height: calc(500px - 24px * 2);
-  min-height: calc(500px - 24px * 2);
+  height: 400px;
+  min-height: 400px;
   overflow: hidden;
   position: relative;
   min-width: 100%;
