--- a/src/components/AnimatedCard/Blog.scss
+++ b/src/components/AnimatedCard/Blog.scss
@@ -3,9 +3,25 @@
 
 @mixin blog {
   &--1 {
-    bottom: 100px;
-    left: 0;
-    max-width: 100%;
+    bottom: 0;
+    left: -10%;
+    max-width: 150%;
+    min-width: 120%;
     z-index: 1;
+
+    @media screen and (min-width: 425px) {
+      bottom: 0;
+      left: auto;
+      max-width: 500px;
+      min-width: auto;
+      right: 0;
+    }
+
+    @media screen and (min-width: 945px) {
+      bottom: 0;
+      left: auto;
+      right: -50px;
+      max-width: 100%;
+    }
   }
 }
