--- a/src/components/AnimatedCard/HowToGuides.scss
+++ b/src/components/AnimatedCard/HowToGuides.scss
@@ -3,9 +3,38 @@
 
 @mixin howToGuides {
   &--1 {
-    bottom: 0;
+    bottom: -50px;
     right: 0;
     max-width: 300px;
     z-index: 1;
+
+    @media screen and (min-width: 425px) {
+      bottom: 0;
+      right: 0;
+      max-width: 300px;
+      right: 0;
+    }
+  }
+}
+
+@mixin howToGuidesCard {
+  min-width: 50%;
+
+  @media screen and (min-width: 768px) {
+    min-width: 60%;
+  }
+
+  .animated-card {
+    height: 500px;
+
+    @media screen and (min-width: 768px) {
+      height: 400px;
+    }
+
+    &__content {
+      > * {
+        max-width: 230px;
+      }
+    }
   }
 }
