--- a/src/components/AnimatedCard/BuiltForGrowth.scss
+++ b/src/components/AnimatedCard/BuiltForGrowth.scss
@@ -3,29 +3,61 @@
 
 @mixin builtForGrowth {
   &--1 {
-    right: 0;
     bottom: 0;
-    max-width: 550px;
+    left: 0;
+    max-width: 400px;
     z-index: 0;
+
+    @media screen and (min-width: 768px) {
+      max-width: 300px;
+    }
   }
 
   &--2 {
     @include lightShadow;
-    max-width: 380px;
-    right: 0;
     bottom: 0;
-    border-radius: 19px 0 0 0;
+    border-radius: 10px 0 0 0;
+    min-width: 120%;
+    opacity: 0.7;
+    right: 0;
     z-index: 2;
+
+    @media screen and (min-width: 425px) {
+      min-width: auto;
+      max-width: 480px;
+    }
+
+    @media screen and (min-width: 768px) {
+      right: -100px;
+    }
+
+    @media screen and (min-width: 1175px) {
+      border-radius: 19px 0 0 0;
+      max-width: 500px;
+    }
   }
 
   &--3 {
     @include lightShadow;
-    bottom: -20px;
+    bottom: -80px;
     border-radius: 40px;
+    left: -70px;
     max-width: 350px;
     overflow: hidden;
-    left: -20px;
-    transform: scale(0.65) !important;
+    transform: scale(0.45) !important;
     z-index: 3;
+
+    @media screen and (min-width: 768px) {
+      bottom: -110px;
+      left: -90px;
+      min-width: auto;
+      transform: scale(0.35) !important;
+    }
+
+    @media screen and (min-width: 935px) {
+      bottom: -100px;
+      left: -50px;
+      transform: scale(0.4) !important;
+    }
   }
 }
