--- a/src/components/AnimatedCard/Delivery.scss
+++ b/src/components/AnimatedCard/Delivery.scss
@@ -4,8 +4,32 @@
 @mixin delivery {
   &--1 {
     bottom: 0;
-    left: calc(50% - 422px / 2);
+    left: 0;
     max-width: 422px;
     transform-origin: center 195px;
+
+    @media screen and (min-width: 425px) {
+      left: calc(50% - 422px / 2);
+    }
+
+    @media screen and (min-width: 768px) {
+      left: calc(50% - 300px / 2);
+      max-width: 300px;
+    }
+
+    @media screen and (min-width: 1110px) {
+      left: calc(50% - 422px / 2);
+      max-width: 422px;
+    }
+  }
+}
+
+@mixin deliveryCard {
+  .animated-card {
+    &__content {
+      > * {
+        max-width: 100%;
+      }
+    }
   }
 }
