--- a/src/components/AnimatedCard/CustomerManagement.scss
+++ b/src/components/AnimatedCard/CustomerManagement.scss
@@ -4,22 +4,99 @@
 @mixin customerManagement {
   &--1 {
     bottom: 0;
-    left: 20px;
-    max-width: 250px;
-    z-index: 1;
+    left: 0;
+    max-width: 150px;
+    z-index: 2;
+
+    @media screen and (min-width: 425px) {
+      bottom: -40px;
+      left: -20px;
+      max-width: 250px;
+    }
+
+    @media screen and (min-width: 545px) {
+      bottom: 0;
+      left: 0;
+      max-width: 280px;
+    }
+
+    @media screen and (min-width: 768px) {
+      bottom: -20px;
+      left: -10px;
+      max-width: 200px;
+    }
+
+    @media screen and (min-width: 975px) {
+      left: auto;
+      right: 200px;
+    }
   }
 
   &--2 {
-    bottom: -20px;
-    max-width: 380px;
-    right: 0;
+    bottom: -70px;
+    max-width: 200px;
+    right: -20px;
     z-index: 1;
+
+    @media screen and (min-width: 425px) {
+      bottom: -40px;
+      max-width: 280px;
+      right: -40px;
+    }
+
+    @media screen and (min-width: 545px) {
+      bottom: 0;
+      max-width: 300px;
+      right: 0;
+    }
+
+    @media screen and (min-width: 768px) {
+      bottom: -40px;
+      max-width: 230px;
+      right: -40px;
+    }
+
+    @media screen and (min-width: 825px) {
+      right: 0;
+    }
+
+    @media screen and (min-width: 975px) {
+      max-width: 250px;
+    }
   }
 
   &--3 {
-    bottom: 0;
+    bottom: -140px;
     left: 0;
     max-width: 350px;
     z-index: 0;
+
+    @media screen and (min-width: 425px) {
+      bottom: -200px;
+      left: 0;
+      max-width: 550px;
+    }
+
+    @media screen and (min-width: 768px) {
+      bottom: -100px;
+      left: 0;
+      max-width: 350px;
+    }
+  }
+}
+
+@mixin customerManagementCard {
+  .animated-card {
+    height: 400px;
+
+    @media screen and (min-width: 768px) {
+      height: 450px;
+    }
+
+    &__content {
+      > * {
+        max-width: 100%;
+      }
+    }
   }
 }
