--- a/src/components/AnimatedCard/Customization.scss
+++ b/src/components/AnimatedCard/Customization.scss
@@ -4,8 +4,34 @@
 @mixin customization {
   &--1 {
     bottom: 0;
-    left: calc(50% - 380px / 2);
-    max-width: 380px;
+    left: calc(50% - 250px / 2);
+    max-width: 250px;
     z-index: 1;
+
+    @media screen and (min-width: 425px) {
+      left: calc(50% - 300px / 2);
+      max-width: 300px;
+    }
+
+    @media screen and (min-width: 768px) {
+      left: calc(50% - 330px / 2);
+      max-width: 330px;
+    }
+  }
+}
+
+@mixin customizationCard {
+  .animated-card {
+    height: 400px;
+
+    @media screen and (min-width: 768px) {
+      height: 450px;
+    }
+
+    &__content {
+      > * {
+        max-width: 100%;
+      }
+    }
   }
 }
