--- a/src/components/AnimatedCard/Mobile.scss
+++ b/src/components/AnimatedCard/Mobile.scss
@@ -4,17 +4,61 @@
 @mixin mobile {
   &--1 {
     bottom: 0;
-    left: calc(50% - 500px / 2);
+    left: 0;
     max-width: 500px;
-    transform-origin: center 250px;
+    transform-origin: center 100%;
     z-index: 1;
+
+    @media screen and (min-width: 425px) {
+      left: calc(50% - 340px / 2);
+      max-width: 340px;
+      transform-origin: center 175px;
+    }
+
+    @media screen and (min-width: 900px) {
+      left: calc(50% - 380px / 2);
+      max-width: 380px;
+      transform-origin: center 195px;
+    }
   }
 
   &--2 {
     bottom: 0;
-    left: calc(50% - 200px / 2);
-    max-width: 200px;
-    transform-origin: center 195px;
+    left: 0;
+    max-width: 425px;
     z-index: 2;
+
+    @media screen and (min-width: 425px) {
+      bottom: 0;
+      left: calc(50% - 405px / 2);
+      max-width: 405px;
+    }
+
+    @media screen and (min-width: 768px) {
+      left: calc(50% - 365px / 2);
+      max-width: 365px;
+    }
+
+    @media screen and (min-width: 900px) {
+      bottom: -20px;
+      left: calc(50% - 425px / 2);
+      max-width: 425px;
+    }
+  }
+}
+
+@mixin mobileCard {
+  .animated-card {
+    height: 400px;
+
+    @media screen and (min-width: 768px) {
+      height: 450px;
+    }
+
+    &__content {
+      > * {
+        max-width: 100%;
+      }
+    }
   }
 }
