--- a/src/components/AnimatedCard/Support.scss
+++ b/src/components/AnimatedCard/Support.scss
@@ -4,16 +4,61 @@
 @mixin support {
   &--1 {
     bottom: 0;
-    left: calc(50% - 380px / 2);
-    max-width: 380px;
-    transform-origin: center 195px;
+    left: 0;
+    max-width: 360px;
+    transform-origin: center 135px;
     z-index: 0;
+
+    @media screen and (min-width: 425px) {
+      left: calc(50% - 340px / 2);
+      max-width: 340px;
+      transform-origin: center 175px;
+    }
+
+    @media screen and (min-width: 900px) {
+      left: calc(50% - 380px / 2);
+      max-width: 380px;
+      transform-origin: center 195px;
+    }
   }
 
   &--2 {
-    bottom: 0;
-    left: calc(50% - 380px / 2);
-    max-width: 380px;
+    bottom: -20px;
+    left: calc(50% - 240px / 2);
+    max-width: 240px;
     z-index: 1;
+
+    @media screen and (min-width: 425px) {
+      bottom: 0;
+      left: calc(50% - 280px / 2);
+      max-width: 280px;
+    }
+
+    @media screen and (min-width: 768px) {
+      left: calc(50% - 200px / 2);
+      max-width: 200px;
+    }
+
+    @media screen and (min-width: 900px) {
+      bottom: -20px;
+      left: calc(50% - 260px / 2);
+      max-width: 260px;
+    }
+  }
+}
+
+@mixin supportCard {
+  .animated-card {
+    height: 400px;
+
+    @media screen and (min-width: 768px) {
+      height: 450px;
+    }
+
+    &__content {
+      > * {
+        max-width: 100%;
+      }
+    }
   }
 }
