--- a/src/components/WebsitePlusMobileSection/WebsitePlusMobileSection.scss
+++ b/src/components/WebsitePlusMobileSection/WebsitePlusMobileSection.scss
@@ -18,12 +18,12 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    margin: 20px 0;
+    margin: 10px 0 30px 0;
     max-width: 700px;
 
     @media screen and (min-width: 768px) {
       gap: 24px;
-      margin: 100px 0;
+      margin: 10px 0 40px 0;
     }
   }
 
