feat: add mobile layout for three-people-with-laptop, two-men-hand-shake, girl-with-laptop, man-with-tablet and man-with-speaker animated cards

--- a/src/components/AnimatedCard/AnimatedCard.scss
+++ b/src/components/AnimatedCard/AnimatedCard.scss
@@ -29,7 +29,7 @@
 @import "./TwoMenHandshake";
 @import "./GirlWithLaptop";
 @import "./ManWithTablet";
-@import "./ManWithSPeaker";
+@import "./ManWithSpeaker";
 @import "./Rating";
 @import "./Mobile";
 
