--- a/src/components/AnimatedCard/GirlWithLaptop.scss
+++ b/src/components/AnimatedCard/GirlWithLaptop.scss
@@ -3,9 +3,19 @@
 
 @mixin girlWithLaptop {
   &--1 {
-    bottom: -100px;
-    left: calc(50% - 300px / 2);
-    max-width: 300px;
+    bottom: -70px;
+    left: calc(50% - 230px / 2);
+    max-width: 230px;
     z-index: 1;
+
+    @media screen and (min-width: 425px) {
+      left: calc(50% - 280px / 2);
+      max-width: 280px;
+    }
+
+    @media screen and (min-width: 768px) {
+      left: calc(50% - 230px / 2);
+      max-width: 230px;
+    }
   }
 }
