--- a/src/components/AnimatedCard/TwoMenHandshake.scss
+++ b/src/components/AnimatedCard/TwoMenHandshake.scss
@@ -3,9 +3,20 @@
 
 @mixin twoMenHandshake {
   &--1 {
-    bottom: -20px;
-    left: calc(50% - 500px / 2);
-    max-width: 500px;
+    bottom: 0;
+    left: 0;
+    max-width: 400px;
     z-index: 1;
+
+    @media screen and (min-width: 425px) {
+      left: calc(50% - 400px / 2);
+      max-width: 400px;
+    }
+
+    @media screen and (min-width: 768px) {
+      bottom: -40px;
+      left: calc(50% - 350px / 2);
+      max-width: 350px;
+    }
   }
 }
