--- a/src/components/AnimatedCard/PhoneChat.scss
+++ b/src/components/AnimatedCard/PhoneChat.scss
@@ -3,9 +3,40 @@
 
 @mixin phoneChat {
   &--1 {
-    bottom: -90px;
-    left: calc(50% - 600px / 2);
-    max-width: 600px;
+    bottom: -160px;
+    left: calc(50% - 500px / 2);
+    min-width: 500px;
     z-index: 1;
+
+    @media screen and (min-width: 375px) {
+      bottom: -160px;
+      left: calc(50% - 600px / 2);
+      min-width: 600px;
+    }
+
+    @media screen and (min-width: 425px) {
+      bottom: -120px;
+    }
+
+    @media screen and (min-width: 535px) {
+      left: calc(50% - 500px / 2);
+      min-width: auto;
+      max-width: 500px;
+    }
+
+    @media screen and (min-width: 768px) {
+      bottom: -90px;
+      left: 0px;
+      max-width: 400px;
+    }
+
+    @media screen and (min-width: 885px) {
+      bottom: -120px;
+      left: calc(50% - 400px / 2);
+    }
+
+    @media screen and (min-width: 1035px) {
+      bottom: -70px;
+    }
   }
 }
