--- a/src/components/AnimatedCard/TechnologyPartner.scss
+++ b/src/components/AnimatedCard/TechnologyPartner.scss
@@ -3,46 +3,133 @@
 
 @mixin technologyPartner {
   &--1 {
-    bottom: -150px;
-    right: -100px;
-    max-width: 800px;
+    bottom: -250px;
+    right: -140px;
+    min-width: 650px;
     z-index: 1;
-    transform: scale(1.3) !important;
+
+    @media screen and (min-width: 565px) {
+      min-width: 850px;
+    }
+
+    @media screen and (min-width: 768px) {
+      min-width: 650px;
+    }
   }
 
   &--2 {
-    left: 240px;
-    bottom: 240px;
+    bottom: 160px;
+    right: 260px;
     z-index: 2;
+
+    @media screen and (min-width: 565px) {
+      bottom: 260px;
+      right: 360px;
+    }
+
+    @media screen and (min-width: 768px) {
+      bottom: 160px;
+      right: 260px;
+    }
   }
 
   &--3 {
-    bottom: 120px;
+    bottom: 40px;
     right: -20px;
     z-index: 2;
+
+    @media screen and (min-width: 565px) {
+      bottom: 140px;
+      right: 80px;
+    }
+
+    @media screen and (min-width: 768px) {
+      bottom: 40px;
+      right: -20px;
+    }
   }
 
   &--4 {
-    right: 120px;
     bottom: -20px;
+    right: 120px;
     z-index: 2;
+
+    @media screen and (min-width: 565px) {
+      bottom: 80px;
+      right: 220px;
+    }
+
+    @media screen and (min-width: 768px) {
+      bottom: -20px;
+      right: 120px;
+    }
   }
 
   &--5 {
-    left: 110px;
-    bottom: 140px;
+    bottom: 60px;
+    right: 360px;
     z-index: 2;
+
+    @media screen and (min-width: 565px) {
+      bottom: 160px;
+      right: 460px;
+    }
+
+    @media screen and (min-width: 768px) {
+      bottom: 60px;
+      right: 360px;
+    }
   }
 
   &--6 {
-    left: 220px;
     bottom: 10px;
+    right: 260px;
     z-index: 2;
+
+    @media screen and (min-width: 565px) {
+      bottom: 110px;
+      right: 360px;
+    }
+
+    @media screen and (min-width: 768px) {
+      bottom: 10px;
+      right: 260px;
+    }
   }
 
   &--7 {
-    bottom: 220px;
+    bottom: 100px;
     right: 120px;
     z-index: 2;
+
+    @media screen and (min-width: 565px) {
+      bottom: 240px;
+      right: 220px;
+    }
+
+    @media screen and (min-width: 768px) {
+      bottom: 140px;
+      right: 120px;
+    }
+  }
+}
+
+@mixin technologyPartnerCard {
+  .animated-card {
+    height: 405px;
+
+    @media screen and (min-width: 565px) {
+      height: 500px;
+    }
+
+    @media screen and (min-width: 768px) {
+      height: 475px;
+    }
+
+    &__content {
+      > * {
+        max-width: 100%;
+      }
+    }
   }
 }
