--- a/src/components/AnimatedCard/Marketing.scss
+++ b/src/components/AnimatedCard/Marketing.scss
@@ -4,21 +4,63 @@
 @mixin marketing {
   &--1 {
     @include lightShadow;
-    bottom: -200px;
+    bottom: -100px;
     border-radius: 16px 16px 0 0;
-    max-width: 520px;
+    max-width: 620px;
+    min-width: 320px;
     overflow: hidden;
     right: -30px;
     z-index: 1;
+
+    @media screen and (min-width: 425px) {
+      bottom: -200px;
+      min-width: auto;
+    }
+
+    @media screen and (min-width: 768px) {
+      max-width: 520px;
+    }
   }
 
   &--2 {
     @include lightShadow;
-    bottom: 0;
+    bottom: -40px;
     border-radius: 16px 16px 0 0;
-    max-width: 260px;
+    max-width: 200px;
     overflow: hidden;
     right: 30px;
     z-index: 2;
+
+    @media screen and (min-width: 425px) {
+      max-width: 250px;
+    }
+
+    @media screen and (min-width: 525px) {
+      max-width: 320px;
+    }
+
+    @media screen and (min-width: 768px) {
+      max-width: 220px;
+    }
+  }
+}
+
+@mixin marketingCard {
+  .animated-card {
+    height: 450px;
+
+    @media screen and (min-width: 525px) {
+      height: 500px;
+    }
+
+    @media screen and (min-width: 768px) {
+      height: 475px;
+    }
+
+    &__content {
+      > * {
+        max-width: 100%;
+      }
+    }
   }
 }
