--- a/src/components/AnimatedCard/Rating.scss
+++ b/src/components/AnimatedCard/Rating.scss
@@ -4,17 +4,36 @@
 @mixin rating {
   &--1 {
     bottom: 0;
-    left: calc(50% - 500px / 2);
-    max-width: 500px;
+    left: 0;
+    max-width: 450px;
     transform-origin: center 250px;
     z-index: 1;
+
+    @media screen and (min-width: 425px) {
+      left: calc(50% - 450px / 2);
+    }
+
+    @media screen and (min-width: 768px) {
+      left: calc(50% - 450px / 2);
+      max-width: 450px;
+    }
   }
 
   &--2 {
     bottom: 0;
-    left: calc(50% - 300px / 2);
-    max-width: 300px;
+    left: calc(50% - 200px / 2);
+    max-width: 200px;
     transform-origin: center 195px;
     z-index: 2;
+
+    @media screen and (min-width: 375px) {
+      left: calc(50% - 250px / 2);
+      max-width: 250px;
+    }
+
+    @media screen and (min-width: 768px) {
+      left: calc(50% - 220px / 2);
+      max-width: 220px;
+    }
   }
 }
