--- a/src/components/BigCards/BigCards.scss
+++ b/src/components/BigCards/BigCards.scss
@@ -11,6 +11,7 @@
 @import "../AnimatedCard/Support";
 @import "../AnimatedCard/Mobile";
 @import "../AnimatedCard/TechnologyPartner";
+@import "../AnimatedCard/Marketing";
 
 .big-cards {
   display: flex;
@@ -68,6 +69,10 @@
 
       &__technology-partner {
         @include technologyPartnerCard;
+      }
+
+      &__marketing {
+        @include marketingCard;
       }
     }
   }
