feat: add mobile layout for rocket and ongoing-updates animated cards

--- a/src/components/AnimatedCard/OngoingUpdates.scss
+++ b/src/components/AnimatedCard/OngoingUpdates.scss
@@ -11,44 +11,95 @@
 
   &--1 {
     border-radius: 16px 16px 0 0;
-    bottom: -200px;
+    bottom: -230px;
     max-width: 560px;
-    right: -60px;
+    min-width: 540px;
+    right: -180px;
     z-index: 1;
+
+    @media screen and (min-width: 465px) {
+      bottom: -200px;
+      right: -60px;
+    }
   }
 
   &--2,
   &--3,
   &--4 {
     border-radius: 8px 8px 0 0;
-    max-width: 120px;
+    max-width: 80px;
     overflow: hidden;
     z-index: 2;
-    height: 150px;
+    height: 120px;
   }
 
   &--2 {
     right: 0;
     bottom: 0;
     right: 20px;
+
+    @media screen and (min-width: 465px) {
+      right: 0;
+      bottom: 0;
+      height: 150px;
+      max-width: 120px;
+    }
   }
 
   &--3 {
     bottom: 0;
-    right: 160px;
+    right: 120px;
     z-index: 2;
+
+    @media screen and (min-width: 465px) {
+      bottom: 0;
+      right: 160px;
+      height: 150px;
+      max-width: 120px;
+    }
   }
 
   &--4 {
     bottom: 0;
-    right: 300px;
+    right: 220px;
     z-index: 2;
+
+    @media screen and (min-width: 465px) {
+      bottom: 0;
+      right: 300px;
+      height: 150px;
+      max-width: 120px;
+    }
   }
 
   &--5 {
-    bottom: 180px;
+    bottom: 140px;
     right: 40px;
     z-index: 3;
-    max-width: 120px;
+    max-width: 70px;
+
+    @media screen and (min-width: 465px) {
+      bottom: 180px;
+    }
+
+    @media screen and (min-width: 768px) {
+      max-width: 120px;
+    }
+  }
+}
+
+@mixin ongoingUpdatesCard {
+  .animated-card {
+    height: 400px;
+
+    @media screen and (min-width: 768px) {
+      height: 475px;
+    }
+
+    &__content {
+      > * {
+        max-width: 100%;
+      }
+    }
   }
 }
