--- a/src/components/AnimatedCard/Relationship.scss
+++ b/src/components/AnimatedCard/Relationship.scss
@@ -5,9 +5,14 @@
   &--1 {
     bottom: 0;
     max-width: 380px;
-    left: calc(50% - 380px / 2);
+    left: 0;
     transform-origin: center 195px;
     z-index: 0;
+
+    @media screen and (min-width: 425px) {
+      max-width: 380px;
+      left: calc(50% - 380px / 2);
+    }
   }
 
   &--2 {
