--- a/src/components/AnimatedCard/RocketV2.scss
+++ b/src/components/AnimatedCard/RocketV2.scss
@@ -3,29 +3,43 @@
 
 @mixin rocketV2 {
   &--1 {
-    bottom: -80px;
+    bottom: 0px;
     right: 0;
+
+    @media screen and (min-width: 768px) {
+      bottom: -80px;
+    }
   }
 
   &--2 {
     bottom: 0;
     left: 0;
-    max-width: 510px;
+    max-width: 230px;
+
+    @media screen and (min-width: 425px) {
+      max-width: 300px;
+    }
+
+    @media screen and (min-width: 875px) {
+      max-width: 510px;
+    }
   }
 }
 
 @mixin rocketV2Content {
-  .animated-card {
-    &__content {
-      margin: 0 0 0 50%;
-    }
+  @media screen and (min-width: 875px) {
+    .animated-card {
+      &__content {
+        margin: 0 0 0 50%;
+      }
 
-    &__title {
-      max-width: 40%;
-    }
+      &__title {
+        max-width: 40%;
+      }
 
-    &__description {
-      max-width: 40%;
+      &__description {
+        max-width: 40%;
+      }
     }
   }
 }
