--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -168,7 +168,7 @@
 
     &-icon {
       align-items: center;
-      display: flex;
+      display: inline-flex;
       justify-content: center;
       transition: all 150ms $animation-2;
 
