--- a/src/components/Theme/Theme.scss
+++ b/src/components/Theme/Theme.scss
@@ -46,6 +46,10 @@
       background-color: $purple-color-2;
     }
 
+    &--meat-stores {
+      background-color: $yellow-color-light-3;
+    }
+
     &--cafes {
       background-color: $cream-color;
     }
@@ -113,6 +117,7 @@
           }
 
           &--services,
+          &--meat-stores,
           &--pet-stores,
           &--cafes {
             right: -70px;
