--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,6 +13,7 @@ $yellow-color-dark: #dcb400;
 $yellow-color-alt: #e4d99a;
 $yellow-color-light: #f6eece;
 $yellow-color-light-2: #ffeab9;
+$yellow-color-light-3: #ede6d6;
 $blue-color: #3355ff;
 $blue-color-hover: #4466ff;
 $blue-color-dark: #243d6f;
