--- a/src/components/AnimatedCard/Support.scss
+++ b/src/components/AnimatedCard/Support.scss
@@ -52,7 +52,8 @@
     height: 400px;
 
     @media screen and (min-width: 768px) {
-      height: 450px;
+      min-height: 450px;
+      height: 100%;
     }
 
     &__content {
