--- a/src/components/ImageCards/ImageCard/ImageCard.scss
+++ b/src/components/ImageCards/ImageCard/ImageCard.scss
@@ -1,5 +1,5 @@
-@import "../../styles/variables";
-@import "../../styles/mixins";
+@import "../../../styles/variables";
+@import "../../../styles/mixins";
 
 .image-card {
   @include thinShadow;
@@ -7,14 +7,19 @@
   border-radius: 20px;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 350px;
+  min-width: 232px;
   overflow: hidden;
   position: relative;
   transition: all 200ms $animation-2;
   width: 100%;
 
-  &:last-of-type {
-    height: 453px;
+  &--carousel {
+    min-width: 300px;
+  }
+
+  &--standard {
+    width: 100%;
   }
 
   &__content {
@@ -23,31 +28,15 @@
     gap: 5px;
     padding: 20px;
     z-index: 1;
-
-    &--smaller-text {
-      padding: 10px;
-
-      @media screen and (min-width: 1064px) {
-        padding: 20px;
-      }
-    }
   }
 
   &__title {
     @include titleInter;
     text-align: left;
-
-    &--smaller-text {
-      @include titleInterSmall;
-    }
   }
 
   &__description {
     @include descriptionManrope;
-
-    &--smaller-text {
-      @include descriptionManropeSmall;
-    }
   }
 
   &__link {
@@ -55,16 +44,19 @@
   }
 
   &__image {
-    left: 0;
-    bottom: 0px;
+    align-items: flex-end;
+    bottom: -180px;
     display: flex;
-    height: 50%;
-    margin: auto 0 0 0;
+    flex-direction: column;
+    left: 0;
+    height: 180px;
+    overflow: hidden;
     position: absolute;
     width: 100%;
     z-index: 0;
 
     img {
+      margin: auto 0 0;
       width: 100%;
     }
   }
